# CtUnits

./: .clang-format  .clang-tidy  .gitignore  .gitpod.dockerfile  .gitpod.yml  CMakeLists.txt  README.md  codecov.yml  gitpod.dockerfile  run_cmakelint.sh  sonar-project.properties
.github/workflows/: all_urls_check.yml  check_shell_scripts.yml  clang_format.yml  cmake_lint.yml  codeql.yml  generate_reports.yaml  infer.yml  macos_build.yml  ms_code_analysis.yml  sonar_cloud_check.yml  static_analysis.yml  third_party_checks.yml  ubuntu_build.yml  windows_build.yml  yaml_check.yml
CtUnits/: CtUnits.hpp
CtUnits/ctu/: Dimension.hpp  MpUnitsDimensionsUtils.hpp  Quantity.hpp  TypeConversionUtils.hpp  UdList.hpp  UdMap.hpp  UnitDimension.hpp  ud_list.hpp
cmake/: CodeCoverage.cmake  CompilerWarnings.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
examples/: CMakeLists.txt
examples/density_units/: CMakeLists.txt  density_units.cpp  density_units_simple.cpp  parse_input.hpp
examples/meters_and_inches/: CMakeLists.txt  meters_and_inches.cpp  meters_and_inches_simple.cpp
examples/pint_puzzle/: CMakeLists.txt  pint_puzzle.cpp
examples/speed_units/: CMakeLists.txt  speed.cpp
scripts/: create_lock.sh  empty_dir.sh  generate_raw_coverage_data.sh  generate_raw_coverage_data_clangxx.sh  generate_raw_coverage_data_gxx.sh  get_build_data_path.sh  get_clangxx_coverage_data_path.sh  get_coverage_report_path.sh  get_gxx_coverage_data_path.sh  get_proj_root.sh  is_already_running.sh  remove_lock.sh  run_gcovr_cobertura.sh  run_gcovr_html.sh  run_gcovr_sonarqube.sh  run_gcovr_xml.sh  run_lcov_and_genhtml.sh  run_llvm-cov.sh
tests/: CMakeLists.txt  TestGetUnitId.cpp  TestIsLessAndIsLessFun.cpp  TestMpUnitsDimensionsUtils.cpp  TestMultiplyDims.cpp  TestQuantity.cpp  TestQuantityPow.cpp  TestQueryUnitDimAndQueryDim.cpp  TestTypeConversionUtils.cpp  TestUnitsDimsRawAdder.cpp  TestZeroDimsRemover.cpp
