macro(subdirlist result curdir)
    file(GLOB children RELATIVE ${curdir} ${curdir}/*)
    set(dirlist "")
    foreach(child ${children})
        if(IS_DIRECTORY ${curdir}/${child})
            list(APPEND dirlist ${child})
        endif()
    endforeach()
    set(${result} ${dirlist})
endmacro()

subdirlist(ALL_EXAMPLES ${CMAKE_CURRENT_SOURCE_DIR})

foreach(subdir ${ALL_EXAMPLES})
    add_subdirectory(${subdir})
endforeach()
